[metadata]
name = crmbase
version = 0.1a
author = Gaston Tjebbes - Majerti
author_email = tech@majerti.fr
keywords = pyramid, scaffold, majerti, web
home_page = ''
project_url = ''
requires_dist =
    pyramid
    SQLAlchemy
    transaction
    pyramid_tm
    pyramid_debugtoolbar
    zope.sqlalchemy
    waitress
    mock
    deform_bootstrap
    pyramid_beaker
    pytest
requires_python = >=2.7
description_file = README.rst
summary = crmbase
license = GPLv3
classifier =
    Development Status :: 1 - Alpha
    License :: OSI Approved :: GNU General Public License (GPL)
    Intended Audience :: Developers
    Framework :: Pyramid
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI

[files]
include_package_data = True
zip_safe = False
packages = crmbase

[specific]
entry_points=
    [paste.app_factory]
    main = crmbase:main
    [console_scripts]
    populate_crmbase = crmbase.scripts.populate:main
test_suite=crmbase
